--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@ a { text-decoration: none; color: inherit; }
 }
 
 .MenuSearch {
-  padding-top: 4px;
+  padding-top: 3px;
 }
 
 .Loading img {
@@ -166,6 +166,7 @@ a { text-decoration: none; color: inherit; }
 
 .Search input, .Search button {
   padding: 10px 15px;
+	margin: 5px;
   font-size: 24px;
   font-weight: 600;
   border: none;
@@ -178,6 +179,7 @@ a { text-decoration: none; color: inherit; }
 }
 
 .Search button {
+	cursor: pointer;
   background: #555;
   color: #eee;
 }
